testsuite/bsc.typechecker/kind/mismatch/ProvisoProvisoMismatch_Local.bsv
module mkProvisoProvisoMismatch_Local();
   module mkMod(Reg#(t))
      provisos(Bits#(szt, j), Bits#(t, szt));
   endmodule
endmodule
